--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -487,12 +487,18 @@ header a:hover {
 .popular__prodpricing p {
   font-weight: 400; }
 
+.quote h1 {
+  font-size: 98px; }
+
 .signup form p {
   color: #96969D;
   font-size: 14px; }
 
 .contact a:hover {
   color: #79DAD6; }
+
+.leftbox__email {
+  color: #96969D; }
 
 footer {
   color: #96969D;
@@ -505,6 +511,7 @@ header,
 .welcome,
 .categories,
 .popular,
+.quote,
 .blog,
 .signup,
 .contact,
@@ -540,6 +547,7 @@ header {
   -ms-flex-align: center;
   align-items: center;
   background: #ffffff;
+  border-bottom: 0.5px solid #96969D;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
@@ -555,36 +563,30 @@ header ul {
   padding: 0; }
 
 .header__leftnav {
-  margin-right: 7%;
-  width: 28%; }
+  margin-right: 7%; }
 
 .header__leftnav a {
   padding: 0px 20px; }
-
-.logoimgdiv {
-  margin-right: 16%;
-  width: 9%; }
 
 header svg {
   width: 100%; }
 
 .header__rightnav {
-  margin-right: 4%; }
+  margin-left: 16%;
+  margin-right: 4%;
+  position: relative; }
 
 .header__notecircle {
   background: #79DAD6;
+  bottom: 40%;
   border-radius: 50px;
   height: 20px;
+  left: 18%;
   position: absolute;
-  right: 24%;
-  top: 30%;
   width: 20px; }
 
 .header__notecircle p {
   margin: 0; }
-
-.header__rightnav__bagicondiv {
-  position: relative; }
 
 .header__rightnav__bagicon {
   height: 25px;
@@ -830,8 +832,10 @@ header .fa {
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin-bottom: 40px;
-  padding: 0px;
-  width: 30%; }
+  padding: 0px; }
+
+.popular__nav a {
+  padding: 0px 15px; }
 
 .popular__nav a:hover {
   border-bottom: 1px solid #292935; }
@@ -860,11 +864,11 @@ header .fa {
 .popular__hotbut,
 .popular__newbut,
 .popular__twentyoffbut {
-  border-radius: 5px;
+  border-radius: 50px;
   color: #ffffff;
-  font-size: 10px;
+  font-size: 11px;
   height: 20px;
-  left: 75%;
+  right: 4%;
   margin: 0.5%;
   position: absolute;
   top: 2%;
@@ -933,13 +937,11 @@ header .fa {
 .quote__leftbox {
   background-image: url(../images/image_quoteleftbackground.jpg);
   background-size: cover;
-  float: left;
   width: 50%; }
 
 .quote__rightbox {
   background-image: url(../images/image_videoplaceholder.jpg);
   background-size: cover;
-  float: right;
   width: 50%; }
 
 .quote h2 {
@@ -981,24 +983,26 @@ header .fa {
 
 .quote__rightbox__txt {
   margin: 0 auto;
-  text-align: center;
-  width: 60%; }
+  text-align: center; }
 
 .quote h1,
 .quote__rightbox__planticondiv {
   display: inline-block;
-  margin: 0;
-  width: 30%; }
+  line-height: 0;
+  margin: 0; }
 
 .quote__rightbox__planticondiv {
   padding-top: 10px; }
+
+.quote__rightbox__planticondiv img {
+  width: 100%; }
 
 .quote h5 {
   color: #ffffff;
   font-size: 16px;
   font-weight: 400;
-  margin-top: 0;
-  padding-bottom: 117.4px; }
+  letter-spacing: 4px;
+  margin-top: 0; }
 
 .quote__rightbox__mediabut img {
   width: 85px; }
@@ -1022,7 +1026,7 @@ header .fa {
   width: 30%; }
 
 .blog img {
-  height: 30vh;
+  height: 100%;
   width: 100%; }
 
 .blog__articlebox__articlecont {
@@ -1032,9 +1036,6 @@ header .fa {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
-
-.blog__articlebox__imgdiv {
-  height: 30vh; }
 
 .blog p {
   text-align: left; }
@@ -1108,11 +1109,11 @@ header .fa {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 100px;
+  padding-top: 65px;
   width: 60%; }
 
 .contact__leftbox {
-  padding: 9px 0px 50px 0px;
+  padding: 9px 0px 65px 0px;
   width: 70%; }
 
 .contact__leftbox p {
@@ -1145,14 +1146,14 @@ header .fa {
 
 .contact__lcbox h3::after {
   bottom: 0px;
-  right: 126px; }
+  left: 0px; }
 
 .contact__rcbox h3::after {
   bottom: 0px;
-  right: 120px; }
+  left: 0px; }
 
 .contact__rightbox h3::after {
-  right: 230px;
+  left: 0px;
   top: 30px; }
 
 .contact__lcbox,
@@ -1169,7 +1170,7 @@ header .fa {
 
 .contact__rcbox,
 .contact__rightboxcont {
-  padding-top: 100px; }
+  padding-top: 65px; }
 
 .contact__rcbox {
   width: 15%; }
@@ -1213,7 +1214,8 @@ footer {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-bottom: 40px; }
+  margin-bottom: 60px;
+  margin-top: 20px; }
 
 footer .wrapper {
   -webkit-box-pack: justify;
@@ -1223,6 +1225,184 @@ footer .wrapper {
 footer .footer__dark {
   color: #292935; }
 
+@media (max-width: 1180px) {
+  .header__rightnav {
+    margin-left: 4%; } }
+
+@media (max-width: 1059px) {
+  .categories__label__airplt h3,
+  .categories__label__offplt h3,
+  .categories__label__houpl h3,
+  .categories__label__pltcont h3 {
+    font-size: 16px; }
+  .contact h3 {
+    font-size: 14px; }
+  .contact__rightbox h3 {
+    margin-top: 3px;
+    padding-bottom: 4px; }
+  .contact__rightbox h3::after {
+    top: 12px; }
+  .contact__pmbox {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; } }
+
 /* Portrait tablet and small desktops */
+@media (max-width: 1014px) {
+  .hero__navindicatordiv {
+    margin-top: 5%; }
+  .quote__leftbox h2 {
+    font-size: 24px; }
+  .quote__rightbox__txt h1 {
+    font-size: 70px; }
+  .quote__rightbox__txt h5 {
+    font-size: 12px; }
+  .quote__rightbox__planticondiv {
+    width: 20%; }
+  .quote__rightbox__mediabut {
+    margin-left: 25px; }
+  .categories__label__airplt h3,
+  .categories__label__offplt h3,
+  .categories__label__houpl h3,
+  .categories__label__pltcont h3 {
+    font-size: 12px; }
+  .categories p {
+    font-size: 12px; }
+  .contact__lcbox a,
+  .contact__rcbox a {
+    border-bottom: 0.5px solid #96969D; }
+  .contact__lcbox a:last-of-type,
+  .contact__rcbox a:last-of-type {
+    border-bottom: none; }
+  footer p {
+    font-size: 10px; } }
+
+@media (max-width: 805px) {
+  .header__leftnav {
+    margin-right: 2%; }
+  .logoimgdiv {
+    width: 10%; }
+  .header__rightnav {
+    margin-left: 2%; }
+  .popular__prodboxcont {
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    width: unset; }
+  .popular__prodbox {
+    width: unset; }
+  .signup__locationimgdiv {
+    width: 15%; } }
+
 /* Landscape phone to portrait tablet */
+@media (max-width: 660px) {
+  .header__rightnav__bagicon {
+    height: 25px;
+    margin: 0px 10px 0px 0px;
+    width: 18px; }
+  .header__notecircle {
+    left: 10%; }
+  .hero__navindicatordiv {
+    display: none; }
+  .hero__centercontent h2 {
+    font-size: 22px; }
+  .hero__centercontent h1 {
+    font-size: 46px; }
+  .contact .wrapper {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .contact__leftboxcont {
+    width: 100%; }
+  .contact__rcbox {
+    width: 38%; }
+  .contact__rightboxcont {
+    width: 55%; }
+  .quote {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .quote__leftbox,
+  .quote__rightbox {
+    width: 100%; }
+  .quote__rightbox__mediabut {
+    padding-top: unset; }
+  .quote__rightbox {
+    padding: 50px 0px; }
+  .contact__lcbox {
+    padding: 15px 0px 0px 10px; } }
+
 /* Landscape phones and down */
+@media (max-width: 480px) {
+  header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    min-height: unset; }
+  .header__leftnav {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3;
+    padding-bottom: 10px; }
+  .logoimgdiv {
+    margin: 20px;
+    width: 36%; }
+  .header__rightnav {
+    width: 28%; }
+  .header__notecircle {
+    left: 20%; }
+  .header__rightnav a:first-of-type {
+    padding-left: 15px; }
+  .hero h2 {
+    margin-top: 130px; }
+  .categories .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .categories__airpltdiv,
+  .categories__rightdivs__offpltdiv,
+  .categories__rightdivs__houpltdiv,
+  .categories__rightdivs__pltcontdiv {
+    margin: 10px 0px; }
+  .categories__label__offplt,
+  .categories__label__houpl {
+    top: 39%;
+    left: 28%;
+    width: 45%; }
+  .blog__articlebox__articlecont {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .blog__articlebox {
+    margin: 30px 0px;
+    width: 100%; }
+  .signup__emailbox {
+    padding-top: 30px;
+    width: 96%; }
+  .signup form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    height: 30px; }
+  .signup form p {
+    padding: 0;
+    margin: 0;
+    width: 43%; }
+  .signup input {
+    width: 67%;
+    padding: 0 0 10px 5px; }
+  .button {
+    padding-bottom: 15px; }
+  .wrapper {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .contact__rcbox {
+    width: 37%; }
+  .contact__rightboxcont {
+    width: 50%; } }
